improve context passages